--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@wordpress/block-serialization-default-parser": "^3.8.0",
+    "@wordpress/i18n": "^3.16.0",
     "next": "^9.5.3",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-confetti": "^6.0.0",
+    "react-dom": "^16.13.1",
+    "react-player": "^2.6.2",
+    "react-wavesurfer": "^0.8.6"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
