--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@wordpress/block-serialization-default-parser": "^3.8.0",
     "@wordpress/i18n": "^3.16.0",
+    "genesis-settings-app": "file:../../npm-components/genesis-settings-app",
+    "mpe-packages": "^1.0.0",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-player": "^2.6.2",
     "react-wavesurfer": "^0.8.6"
   },
