--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@wordpress/block-serialization-default-parser": "^3.8.0",
     "@wordpress/i18n": "^3.16.0",
-    "genesis-settings-app": "file:../../npm-components/genesis-settings-app",
+    "genesis-settings-app": "^1.0.8",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
-    "react-player": "^2.6.2",
+    "react-player": "^2.6.2"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
